<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.LanguageActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="157dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:text="@string/title_language"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:elevation="12dp"
        android:id="@+id/cl_rus"
        android:layout_marginTop="20dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingStart="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_language"
        android:background="@drawable/language_button">

        <ImageView
            android:id="@+id/image_ru"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_flag_rus"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_ru"
            app:layout_constraintBottom_toTopOf="@+id/text_ru"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/text_ru"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rus"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="@+id/image_ru"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:elevation="12dp"
        android:id="@+id/cl_en"
        android:layout_marginTop="20dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingStart="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_rus"
        android:background="@drawable/language_button">

        <ImageView
            android:id="@+id/image_en"
            android:layout_width="16dp"
            android:src="@drawable/ic_flag_en"
            android:layout_height="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_en"
            app:layout_constraintBottom_toTopOf="@+id/text_en"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/text_en"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="@+id/image_en"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>