<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl"
                android:layout_marginTop="14dp"
                android:paddingBottom="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/station"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:textColor="@color/colorBlack"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

<!--                <TextView-->
<!--                    android:id="@+id/text_switch"-->
<!--                    android:layout_marginEnd="10dp"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/text_switch"-->
<!--                    android:textColor="@color/colorBlack"-->
<!--                    android:textSize="14sp"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/switch_"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/switch_"-->
<!--                    app:layout_constraintBottom_toTopOf="@+id/switch_"/>-->

                <Switch
                    android:id="@+id/switch_"
                    android:text="@string/text_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cs"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/raund_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cl"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_marginStart="13dp"
                    android:id="@+id/search_image"
                    android:tint="@color/colorWhite"
                    android:src="@drawable/ic_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/search_edit"
                    android:hint="@string/search"
                    android:textColorHint="@color/colorSilverB"
                    android:textColor="@color/colorBlack"
                    android:maxLines="1"
                    android:maxLength="64"
                    android:inputType="text"
                    android:imeOptions="actionSearch"
                    android:backgroundTint="@color/colorBlack"
                    android:textCursorDrawable="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/search_image"
                    android:theme="@style/ThemeEditText"
                    />

                <ImageView
                    android:layout_marginEnd="10dp"
                    android:id="@+id/filtr_image"
                    android:tint="@color/colorWhite"
                    android:src="@drawable/ic_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:layout_marginTop="16dp"
                android:id="@+id/tabs"
                app:tabSelectedTextColor="@color/colorWhite"
                app:tabTextColor="@color/colorBlack"
                app:tabBackground="@drawable/tab_selector"
                android:clipToPadding="false"
                app:tabIndicatorHeight="0dp"
                app:tabIndicatorColor="@color/colorGreen"
                app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@+id/cs"
                app:layout_constraintStart_toStartOf="parent"
                app:tabMode="scrollable" />
<!--            app:tabMaxWidth="280dp"-->
<!--            app:tabMinWidth="180dp"-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tabs"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <FrameLayout-->
<!--            app:layout_constraintBottom_toTopOf="@+id/nav_view"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:id="@+id/nav_host_container"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"/>-->

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>